syntax = "proto3";
package dalc;
option go_package = "github.com/celestiaorg/optimint/types/pb/dalc";

import "optimint/optimint.proto";

enum StatusCode {
	STATUS_CODE_UNSPECIFIED = 0;
	STATUS_CODE_SUCCESS = 1;
	STATUS_CODE_TIMEOUT = 2;
	STATUS_CODE_ERROR   = 3;
}

message DAResponse {
	StatusCode code = 1;
	string message = 2;
	uint64 data_layer_height = 3;
}

message SubmitBlockRequest {
	optimint.Block block = 1;
}

message SubmitBlockResponse {
	DAResponse result = 1;
}

message CheckBlockAvailabilityRequest {
	uint64 data_layer_height = 1;
}

message CheckBlockAvailabilityResponse {
	DAResponse result = 1;
	bool data_available = 2;
}

message RetrieveBlocksRequest {
	uint64 data_layer_height = 1;
}

message RetrieveBlocksResponse {
	DAResponse result = 1;
	repeated optimint.Block blocks = 2;
}

service DALCService {
	rpc SubmitBlock(SubmitBlockRequest) returns (SubmitBlockResponse) {}
	rpc CheckBlockAvailability(CheckBlockAvailabilityRequest) returns (CheckBlockAvailabilityResponse) {}
	rpc RetrieveBlocks(RetrieveBlocksRequest) returns (RetrieveBlocksResponse) {}
}
